--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -42,69 +42,24 @@
       </ion-col>
     </ion-row>
     <ion-row class="ion-padding-start ion-padding-end margin_bottom_new">
-        <ion-col size="12" text-center>
-            <h2 class="color_65_titulos">Dircetur news</h2>
-        </ion-col>
-        <ion-col size="12" size-md="6" class="margin_bottom_escpacio">
-            <ion-row>
-              <ion-col size="4" class="paddign_top_bottom">
-                  <img src="assets/img/6d1fe118f7b69100f7db3a75ec909418@3x.png" style="width: 100%;height: 100%;">
-              </ion-col>
-              <ion-col size="8" class="paddign_top_bottom">
-                <h6 class="ion-no-margin subtitulos_noticia">Noticia de la semana</h6>
-                <div style="display:flex;">
-                  <p class="even_fecha_color">Eventos</p>
-                  <p class="ion-margin-start even_fecha_color">23/12/2018</p>
-                </div>
-                <p class="lineas_texto_noticia">Órgano de Línea de segundo nivel organizacional, responsable de proponer y ejecutar la política regional de desarrollo y promoción de la artesanía; así como fomentar las exportaciones de los productos artesanales, su sigla es DART.</p>
-              </ion-col>
-            </ion-row>
-        </ion-col>
-        <ion-col size="12" size-md="6" class="margin_bottom_escpacio">
-            <ion-row>
-              <ion-col size="4" class="paddign_top_bottom">
-                  <img src="assets/img/52947eaf773e890ef9c7317269f44164@3x.png" style="width: 100%;height: 100%;">
-              </ion-col>
-              <ion-col size="8" class="paddign_top_bottom">
-                <h6 class="ion-no-margin subtitulos_noticia">Noticia de la semana</h6>
-                <div style="display:flex;">
-                  <p class="even_fecha_color">Eventos</p>
-                  <p class="ion-margin-start even_fecha_color">23/12/2018</p>
-                </div>
-                <p class="lineas_texto_noticia">Órgano de Línea de segundo nivel organizacional, responsable de proponer y ejecutar la política regional de desarrollo y promoción de la artesanía; así como fomentar las exportaciones de los productos artesanales, su sigla es DART.</p>
-              </ion-col>
-            </ion-row>
-        </ion-col>
-        <ion-col size="12" size-md="6" class="margin_bottom_escpacio">
-            <ion-row>
-              <ion-col size="4" class="paddign_top_bottom">
-                  <img src="assets/img/19bdb926157e2433842a419570dda4e2@3x.png" style="width: 100%;height: 100%;">
-              </ion-col>
-              <ion-col size="8" class="paddign_top_bottom">
-                <h6 class="ion-no-margin subtitulos_noticia">Noticia de la semana</h6>
-                <div style="display:flex;">
-                  <p class="even_fecha_color">Eventos</p>
-                  <p class="ion-margin-start even_fecha_color">23/12/2018</p>
-                </div>
-                <p class="lineas_texto_noticia">Órgano de Línea de segundo nivel organizacional, responsable de proponer y ejecutar la política regional de desarrollo y promoción de la artesanía; así como fomentar las exportaciones de los productos artesanales, su sigla es DART.</p>
-              </ion-col>
-            </ion-row>
-        </ion-col>
-        <ion-col size="12" size-md="6" class="margin_bottom_escpacio">
-            <ion-row>
-              <ion-col size="4" class="paddign_top_bottom">
-                  <img src="assets/img/766dc5070954f7d5d036374eb44ee345@3x.png" style="width: 100%;height: 100%;">
-              </ion-col>
-              <ion-col size="8" class="paddign_top_bottom">
-                <h6 class="ion-no-margin subtitulos_noticia">Noticia de la semana</h6>
-                <div style="display:flex;">
-                  <p class="even_fecha_color">Eventos</p>
-                  <p class="ion-margin-start even_fecha_color">23/12/2018</p>
-                </div>
-                <p class="lineas_texto_noticia">Órgano de Línea de segundo nivel organizacional, responsable de proponer y ejecutar la política regional de desarrollo y promoción de la artesanía; así como fomentar las exportaciones de los productos artesanales, su sigla es DART.</p>
-              </ion-col>
-            </ion-row>
-        </ion-col>
+      <ion-col size="12" text-center>
+          <h2 class="color_65_titulos">Dircetur news</h2>
+      </ion-col>
+      <ion-col *ngFor="let item of blogs" size="12" size-md="6" class="margin_bottom_escpacio">
+        <ion-row (click)="view_blog (item)">
+          <ion-col size="4" class="paddign_top_bottom">
+            <img [src]="item.imagen" style="width: 100%;height: 100%;">
+          </ion-col>
+          <ion-col size="8" class="paddign_top_bottom">
+            <h6 class="ion-no-margin subtitulos_noticia">{{ item.titulo_es }}</h6>
+            <div style="display:flex;">
+              <p class="even_fecha_color">{{ item.categoria.nombre }}</p>
+              <p class="ion-margin-start even_fecha_color">{{ get_format_date (item.fecha_creado) }}</p>
+            </div>
+            <p class="lineas_texto_noticia">{{ item.resumen_es }}</p>
+          </ion-col>
+        </ion-row>
+      </ion-col>
     </ion-row>
     <ion-row id="fondo_boleto_img" class="ion-padding-end">
       <ion-col size="12">
@@ -125,23 +80,23 @@
             <h2 class="color_65_titulos">Upcoming events</h2>
         </ion-col>
         <ion-col size="2" text-right class="ion-margin-bottom">
-          <button class="flechas_tamaño_calender padding_cero">
+          <button class="flechas_tamaño_calender padding_cero" (click)="change_month (-1)">
             <img src="assets/img/icono-derecha.png" width="100%" height="100%">
           </button>
         </ion-col>
         <ion-col size="8" text-center class="ion-margin-bottom">
-          <p id="diciembre_year">Diciembre 2019</p>
+          <p id="diciembre_year">{{ get_calendar_header () }}</p>
         </ion-col>
         <ion-col size="2" class="ion-margin-bottom">
-          <button class="flechas_tamaño_calender padding_cero">
+          <button class="flechas_tamaño_calender padding_cero" (click)="change_month (+1)">
             <img src="assets/img/icono-izquierda.png" width="100%" height="100%">
           </button>
         </ion-col>
-        <ion-col size="12" size-md="6" size-lg="6" class="padding_eventos ion-margin-bottom">
+        <ion-col *ngFor="let item of eventos" size="12" size-md="6" size-lg="6" class="padding_eventos ion-margin-bottom">
           <ion-row>
             <ion-col size="3" class="cuadrado_azul_calender padding_cero largo_eventos" text-center>
-              <p class="color_blanco fecha_number">04</p>
-              <p class="color_blanco nombre_mes">OCT</p>
+              <p class="color_blanco fecha_number">{{ get_date_format (item.datageneral.fecha, 'DD') }}</p>
+              <p class="color_blanco nombre_mes">{{ get_date_format (item.datageneral.fecha, 'MMM') }}</p>
             </ion-col>
             <ion-col size="9" class="sombra_img_descripcion padding_cero">
               <ion-row style="height: 100%;">
@@ -149,107 +104,7 @@
                   <img src="assets/img/mes-img1.png" width="100%" height="100%">
                 </ion-col>
                 <ion-col size="8" class="padding_derecha_izquierda largo_eventos">
-                  <p class="titulo_calnedar">Virgen de algo</p>
-                  <p class="subtitulo_calendar">Fiesta patronal</p>
-                  <p class="lugar_img">Paucartambo</p>
-                </ion-col>
-              </ion-row>
-            </ion-col>
-          </ion-row>
-        </ion-col>
-        <ion-col size="12" size-md="6" size-lg="6" class="padding_eventos ion-margin-bottom">
-          <ion-row>
-            <ion-col size="3" class="cuadrado_azul_calender padding_cero largo_eventos" text-center>
-              <p class="color_blanco fecha_number">04</p>
-              <p class="color_blanco nombre_mes">OCT</p>
-            </ion-col>
-            <ion-col size="9" class="sombra_img_descripcion padding_cero">
-              <ion-row style="height: 100%;">
-                <ion-col size="4" class="padding_cero sombra_img largo_eventos">
-                  <img src="assets/img/mes-img1.png" width="100%" height="100%">
-                </ion-col>
-                <ion-col size="8" class="padding_derecha_izquierda largo_eventos">
-                  <p class="titulo_calnedar">Virgen de algo</p>
-                  <p class="subtitulo_calendar">Fiesta patronal</p>
-                  <p class="lugar_img">Paucartambo</p>
-                </ion-col>
-              </ion-row>
-            </ion-col>
-          </ion-row>
-        </ion-col>
-        <ion-col size="12" size-md="6" size-lg="6" class="padding_eventos ion-margin-bottom">
-          <ion-row>
-            <ion-col size="3" class="cuadrado_azul_calender padding_cero largo_eventos" text-center>
-              <p class="color_blanco fecha_number">04</p>
-              <p class="color_blanco nombre_mes">OCT</p>
-            </ion-col>
-            <ion-col size="9" class="sombra_img_descripcion padding_cero">
-              <ion-row style="height: 100%;">
-                <ion-col size="4" class="padding_cero sombra_img largo_eventos">
-                  <img src="assets/img/mes-img1.png" width="100%" height="100%">
-                </ion-col>
-                <ion-col size="8" class="padding_derecha_izquierda largo_eventos">
-                  <p class="titulo_calnedar">Virgen de algo</p>
-                  <p class="subtitulo_calendar">Fiesta patronal</p>
-                  <p class="lugar_img">Paucartambo</p>
-                </ion-col>
-              </ion-row>
-            </ion-col>
-          </ion-row>
-        </ion-col>
-        <ion-col size="12" size-md="6" size-lg="6" class="padding_eventos ion-margin-bottom">
-          <ion-row>
-            <ion-col size="3" class="cuadrado_azul_calender padding_cero largo_eventos" text-center>
-              <p class="color_blanco fecha_number">04</p>
-              <p class="color_blanco nombre_mes">OCT</p>
-            </ion-col>
-            <ion-col size="9" class="sombra_img_descripcion padding_cero">
-              <ion-row style="height: 100%;">
-                <ion-col size="4" class="padding_cero sombra_img largo_eventos">
-                  <img src="assets/img/mes-img1.png" width="100%" height="100%">
-                </ion-col>
-                <ion-col size="8" class="padding_derecha_izquierda largo_eventos">
-                  <p class="titulo_calnedar">Virgen de algo</p>
-                  <p class="subtitulo_calendar">Fiesta patronal</p>
-                  <p class="lugar_img">Paucartambo</p>
-                </ion-col>
-              </ion-row>
-            </ion-col>
-          </ion-row>
-        </ion-col>
-        <ion-col size="12" size-md="6" size-lg="6" class="padding_eventos ion-margin-bottom">
-          <ion-row>
-            <ion-col size="3" class="cuadrado_azul_calender padding_cero largo_eventos" text-center>
-              <p class="color_blanco fecha_number">04</p>
-              <p class="color_blanco nombre_mes">OCT</p>
-            </ion-col>
-            <ion-col size="9" class="sombra_img_descripcion padding_cero">
-              <ion-row style="height: 100%;">
-                <ion-col size="4" class="padding_cero sombra_img largo_eventos">
-                  <img src="assets/img/mes-img1.png" width="100%" height="100%">
-                </ion-col>
-                <ion-col size="8" class="padding_derecha_izquierda largo_eventos">
-                  <p class="titulo_calnedar">Virgen de algo</p>
-                  <p class="subtitulo_calendar">Fiesta patronal</p>
-                  <p class="lugar_img">Paucartambo</p>
-                </ion-col>
-              </ion-row>
-            </ion-col>
-          </ion-row>
-        </ion-col>
-        <ion-col size="12" size-md="6" size-lg="6" class="padding_eventos ion-margin-bottom">
-          <ion-row>
-            <ion-col size="3" class="cuadrado_azul_calender padding_cero largo_eventos" text-center>
-              <p class="color_blanco fecha_number">04</p>
-              <p class="color_blanco nombre_mes">OCT</p>
-            </ion-col>
-            <ion-col size="9" class="sombra_img_descripcion padding_cero">
-              <ion-row style="height: 100%;">
-                <ion-col size="4" class="padding_cero sombra_img largo_eventos">
-                  <img src="assets/img/mes-img1.png" width="100%" height="100%">
-                </ion-col>
-                <ion-col size="8" class="padding_derecha_izquierda largo_eventos">
-                  <p class="titulo_calnedar">Virgen de algo</p>
+                  <p class="titulo_calnedar">Titulo</p>
                   <p class="subtitulo_calendar">Fiesta patronal</p>
                   <p class="lugar_img">Paucartambo</p>
                 </ion-col>
