--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,19 @@
 <ion-app>
-  <ion-menu side="end" type="menu">
+  <ion-menu side="end" menuId="first">
     <ion-header>
-      <ion-toolbar color="blue">
-        <ion-title>CPS</ion-title>
+      <ion-toolbar color="primary">
+        <ion-title>Start Menu</ion-title>
       </ion-toolbar>
     </ion-header>
     <ion-content>
-      
+      <ion-list>
+        <ion-item>Menu Item</ion-item>
+        <ion-item>Menu Item</ion-item>
+        <ion-item>Menu Item</ion-item>
+        <ion-item>Menu Item</ion-item>
+        <ion-item>Menu Item</ion-item>
+      </ion-list>
     </ion-content>
   </ion-menu>
-
   <ion-router-outlet main></ion-router-outlet>
 </ion-app>
