--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -93,7 +93,7 @@
               <ion-row style="height: 100%;">
                 <ion-col size="12" class="padding_derecha_izquierda largo_eventos">
                   <p class="titulo_calnedar">{{ item.datageneral.titulo }}</p>
-                  <p class="subtitulo_calendar">{{ item.datageneral.categoria.name }}</p>
+                  <p class="subtitulo_calendar">{{ item.datageneral.categoria?.name }}</p>
                   <!--p class="lugar_img">{{ item.datageneral.provincia.nombre }}</!p-->
                 </ion-col>
               </ion-row>
