--- a/src/app/search-results/search-results.page.scss
+++ b/src/app/search-results/search-results.page.scss
@@ -1,4 +1,4 @@
-#titulo {
+.titulo {
     color: #656565;
     font-weight: 700;
     font-size: 17pt;
@@ -21,10 +21,12 @@
     padding-left: 1rem !important;
 }
 
-#icon-padding {
+.icon-padding {
     padding-right: 1rem !important;
 }
-
+.color_icoon_search{
+    color: #D6D6D6;
+}
 .margin-top {
     margin-top: 1rem !important;
 }
@@ -36,8 +38,15 @@
 
 .card-content {
     margin-top: 0px;
-    height: 131px;
     border-radius: 0px 0px 0px 0px;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    -webkit-box-shadow: 0px 6px 9px 2px rgba(156,156,156,1);
+    -moz-box-shadow: 0px 6px 9px 2px rgba(156,156,156,1);
+    box-shadow: 0px 6px 9px 2px rgba(156,156,156,1);
+    margin-bottom: 1rem;
 }
 
 .transition {
@@ -63,12 +72,152 @@
 
 .header-label {
     color: #7E7E7E;
+    font-size: 11px;
 }
 
 .content-label {
     color: #3E729A;
+    padding-left: 8px;
+    font-size: 11px;
+}
+@media(min-width: 360px){
+    .header-label {
+        font-size: 13px;
+    }
+    
+    .content-label {
+        font-size: 13px;
+    }
+}
+@media(min-width: 411px){
+    .header-label {
+        font-size: 16px;
+    }
+    
+    .content-label {
+        font-size: 16px;
+    }
+}
+@media(min-width: 480px){
+    .header-label {
+        font-size: 18px;
+    }
+    
+    .content-label {
+        font-size: 18px;
+    }
+}
+.list-none {
+    list-style-type: none;
+    padding-left: 0px;
+}
+.border_col{
+    border-bottom: 2px solid #C4C4C4;
+}
+.padding_left_col{
+    padding-left: 5px;
+    padding-right: 0px;
+    padding-top: 0px;
+}
+.bajar_list{
+    margin-top: 1rem;
+}
+#color_negrita{
+    color: #656565;
+    font-weight: 900;
+}
+.btn_manos{
+    width: 100%;
+    background-color: #fff;
+    color: #a5a5a5;
+}
+button:focus{
+    outline:none;
+    box-shadow:none;
+}
+#like_bajo{
+    margin-top: 13px;
+}
+@media(min-width: 360px){
+    #like_bajo{
+        margin-top: 17px;
+    }
+}
+@media(min-width: 480px){
+    #like_bajo{
+        margin-top: 29px;
+    }
+}
+@media(min-width: 568px){
+    #descripcion{
+       margin-left: -37px; 
+    }
+}
+@media(min-width: 640px){
+    #descripcion{
+       margin-left: -16px; 
+    }
+    #like_bajo{
+        margin-top: 41px;
+    }
+}
+@media(min-width: 731px){
+    #descripcion{
+       margin-left: -44px; 
+    }
+}
+@media(min-width: 812px){
+    #descripcion{
+       margin-left: -64px; 
+    }
+}
+@media(min-width: 1024px){
+    #descripcion{
+       margin-left: -36px; 
+    }
+    #like_bajo{
+        margin-top: 67px;
+    }
+}
+@media(min-width: 1366px){
+    #descripcion{
+       margin-left: -90px; 
+    }
+    #like_bajo{
+        margin-top: 94px;
+    }
+}
+.number_color{
+    color: #EC494B;
+    padding-right: 5px;
+    font-weight: bolder;
+}
+.descripcon_number{
+    color: #818181;
+    font-weight: 100;
+}
+@media(min-width: 411px){
+    .number_color{
+       font-size: 16px;
+    }
+    .descripcon_number{
+        font-size: 16px;
+    }
+}
+@media(min-width: 480px){
+    .number_color{
+       font-size: 18px;
+    }
+    .descripcon_number{
+        font-size: 18px;
+    }
+}
+.color_descrion{
+    color: #818181;
+}
+.padding_tops_col{
+   padding-left: 25px;
+   padding-right: 16px;
 }
 
-#list-none {
-    list-style-type: none;
-}
+
