--- a/src/app/calendario/calendario.page.html
+++ b/src/app/calendario/calendario.page.html
@@ -22,6 +22,11 @@
       </ion-col>
     </ion-row>-->
     <ion-row id="bajar_titutlo" class="ion-padding-start ion-padding-end">
+      <button class="btn_menu">
+        <div class="div_linea_color div_line_menu"></div>
+        <div class="div_linea_color div_line_menu"></div>
+        <div class="div_linea_color" id="div_line_menu_peque"></div>
+      </button>
         <ion-col size="12" text-center>
             <h1 class="color_65_titulos">Dircetur Cusco</h1>
             <p class="event_color">Event clendar</p>
