--- a/src/app/calendario/calendario.page.scss
+++ b/src/app/calendario/calendario.page.scss
@@ -64,6 +64,9 @@
     background-color: #ffffff;
     padding-top: 2px;
     margin-top: 1rem;
+    position: absolute;
+    right: 0;
+    top: 0;
 }
 .div_linea_color{
     height: 1px;
